# ini-ai

./: .gitignore  Cargo.toml  README.md
src/: cli.rs  config.rs  embedded.rs  init.rs  interactive.rs  main.rs  template.rs
templates/: programming-team.md
