[package]
name = "init-ai"
version = "0.1.0"
edition = "2021"
authors = ["Rexfelix <felsbaroq@gmail.com>"]
description = "A CLI tool to easily add AI team collaboration rules to your project"

[[bin]]
name = "initai"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
dialoguer = "0.11"
dirs = "5.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
colored = "2.1"
anyhow = "1.0"

[dev-dependencies]
tempfile = "3.10"
assert_cmd = "2.0"
predicates = "3.1"
